@@ -1,5 +1,9 @@
  (Format: Year/Month/Day)
 Changes for 1.0rc3:
+*07/03/21:
+   * HideMenus didn't work on CustomMenus, and also fixed a memleak with
+     CustomMenu (Mark + thanks Julien Trolet)
+     FbCommands.cc/hh
 *07/03/20:
    * Updated doc/asciidoc/fluxbox.txt (Mathias)
 *07/03/19:
